--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,13 @@ code {
   padding: 0;
   box-sizing: border-box;
 }
+ .phone input{
+    width: 15rem;
+   border: 1px solid #E0E0E0;
+   outline: none;
+   color: #697079;
+  font-size: 0.8rem;
+   padding: 0.6rem;
+   margin: 0 auto;
+   border-radius: 0.3rem;
+   }
